# planner

./: .gitignore
.github/workflows/: tests.yml
docs/: Planner.excalidraw
docs/diagrams/src/services/authorization/: ER-diagram.plantuml
src/: Dockerfile.postgres  docker-compose.yml
src/backend/Planner/: Dockerfile
src/backend/Planner/src/: main.py
src/scripts/: init_schema.sh
src/services/Planner/: Dockerfile  pyproject.toml
src/services/Planner/tests/: test_planner.py
src/services/authorization/: .flake8  Dockerfile  pyproject.toml
src/services/authorization/app/: initial_database.py
src/services/authorization/app/crud/: __init__.py  base.py  direction.py  permission.py  role.py  user.py
src/services/authorization/app/database/: __init__.py  base_class.py  connection.py  custom_types.py
src/services/authorization/app/models/: __init__.py  direction.py  permission.py  role.py  role_permission.py  user.py
src/services/authorization/scripts/: format.sh
src/services/authorization/tests/: conftest.py  test_custom_types.py
src/services/authorization/tests/crud/: test_base.py  test_direction.py  test_permission.py  test_role.py  test_user.py
src/services/gateway/: pyproject.toml
src/services/gateway/app/: main.py
src/services/gateway/scripts/: lint.sh
