[tool.poetry]
name = "authorization"
version = "0.1.0"
description = ""
authors = ["Dormidontov A.A <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
