[tool.poetry]
name = "authorization"
version = "0.1.0"
description = ""
authors = ["Dormidontov A.A <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
mypy = "^0.982"
isort = "^5.10.1"
flake8 = "^5.0.4"
autoflake = "^1.7.7"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
local_partial_types = true
strict_equality = true
pretty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
